# mate-polkit

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  makepot  mate-polkit.pot  meson.build  meson_options.txt
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config
2020-05-07-124058-2278-cppcheck@bf7df7e3d3d2_travis_notif/: index.html
2020-06-22-151338-1458-cppcheck@e95f1edfde30_travis-ci/: 0.html
2020-06-26-183545-5384-cppcheck@886dfb0e66d6_master/: stats.html
2020-07-19-114333-9453-cppcheck@7b8c61fa47df_master/: 0.html  index.html  stats.html
2020-11-18-092127-4795-cppcheck@8885606d3a93_master/: 0.html  index.html  stats.html
2021-03-08-234922-3540-cppcheck@b70790e0884d_master/: 0.html  index.html  stats.html
2022-11-11-213722-0509-cppcheck@f6c2c37d31d3_master/: index.html  stats.html
2023-01-31-064338-0666-cppcheck@121a9aba9d75_ayatana-indicators2/: 0.html  index.html
2023-02-10-194918-4414-cppcheck@65a6c367e28e_master/: 0.html
2023-05-23-093151-5604-cppcheck@13874beaa074_meson/: index.html
2023-08-30-131815-8382-cppcheck@5851bb1e1c2c_master/: 0.html
2023-09-02-184611-1622-cppcheck@4b078a16e961_master/: stats.html
2024-02-15-172653-3023-cppcheck@256d08c4a418_travis/: 5.html
2024-02-15-173245-9368-cppcheck@aacfb22a55ce_master/: 0.html  4.html
2024-02-24-205454-0706-cppcheck@1d41ea003763_shiti-meson/: 2.html
2024-02-26-105642-9744-cppcheck@c2df8de7c7b1_v1.28.1/: 1.html  6.html  index.html  stats.html
2024-02-26-105807-9780-cppcheck@c2df8de7c7b1_master/: 3.html
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
docs/: Makefile.am  polkit-gtk-mate-1-docs.xml
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  ar_AE.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bqi.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_AT.po  de_CH.po  dz.po  el.po  en_AU.po  en_BR.po  en_CA.po  en_DE.po  en_GB.po  en_US.po  eo.po  (+141 more)
polkitgtkmate/: Makefile.am  example.c  polkitgtkmate.h  polkitgtkmatetypes.h  polkitlockbutton.c  polkitlockbutton.h
src/: Makefile.am  main.c  meson.build  polkit-mate-authentication-agent-1.desktop.in.in  polkitmateauthenticationdialog.c  polkitmateauthenticationdialog.h  polkitmateauthenticator.c  polkitmateauthenticator.h  polkitmatelistener.c  polkitmatelistener.h
